# metaplex_core_tutorial

./: Anchor.toml  package-lock.json  package.json
programs/create-core-asset-example/: Cargo.toml
programs/create-core-asset-example/src/: lib.rs
tests/: create-core-asset-example.ts
